# cracker3

./: .cursorignore  .gitignore  Cargo.toml  README.md  config.toml  generate_hourly_vols.py  vpn_pass.txt
.cargo/: config.toml
parse_goldsky/: Cargo.toml  README.md
parse_goldsky/src/: main.rs
scripts/: inspect_polymarket_cache.sh  plot_pnl.py
src/: config.rs  lib.rs  main.rs  models.rs  traits.rs
src/backtest/: mod.rs  runner.rs
src/catalog/: deribit.rs  derive.rs  mod.rs  polymarket.rs
src/connectors/: backtest.rs  deribit.rs  derive.rs  mod.rs  polymarket.rs
src/dashboard/: mod.rs
src/engine/: mod.rs
src/optimizer/: halton.rs  kelly.rs  mod.rs  opportunity.rs  sobol.rs
src/pricing/: black_scholes.rs  distribution.rs  mod.rs  vol_surface.rs  vol_time.rs
src/simulation/: execution.rs
src/strategy/: cross_market.rs  gamma_scalp.rs  mod.rs  momentum.rs
tests/: multi_file_backtest.rs  polymarket_integration.rs
