# Cargo.toml

[package]
name = "trading_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# WebSockets & HTTP
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.5"

# Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Architecture
async-trait = "0.1"
futures = "0.3"

# Utils
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# Dashboard Web Server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
