# Cargo.toml

[package]
name = "trading_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# WebSockets & HTTP
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.5"

# Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Architecture
async-trait = "0.1"
futures = "0.3"

# Utils
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
regex = "1.10"
toml = "0.8"

# Dashboard Web Server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# Polymarket CLOB Client (official SDK for order signing/placement)
polymarket-client-sdk = { git = "https://github.com/Polymarket/rs-clob-client" }
alloy = { version = "1.2", default-features = false, features = ["signers", "signer-local"] }
rust_decimal = "1.39"

# Optimization
argmin = "0.10"
argmin-math = { version = "0.4", features = ["vec"] }
